[gd_scene load_steps=9 format=2]

[ext_resource path="res://population2.gd" type="Script" id=1]
[ext_resource path="res://texutures/tile/Tiles012_1K_Roughness.jpg" type="Texture" id=2]
[ext_resource path="res://texutures/tile/Tiles012_1K_Color.jpg" type="Texture" id=3]
[ext_resource path="res://texutures/tile/Tiles012_1K_Normal.jpg" type="Texture" id=4]
[ext_resource path="res://LEMONMILK-Light.otf" type="DynamicFontData" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 3 )
roughness_texture = ExtResource( 2 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 4 )
uv1_triplanar = true

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 100, 500 )

[sub_resource type="DynamicFont" id=3]
size = 39
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="train" type="Spatial"]

[node name="all_camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.766045, 0.642788, 0, -0.642788, 0.766045, 0, 20, 9.474 )
current = true
far = 121.4

[node name="best_camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 40, 10.524 )
current = true
far = 115.8

[node name="plane" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -47.4484 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="population" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="V" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.05945
margin_right = 1.05945
__meta__ = {
"_edit_use_anchors_": false
}

[node name="watch_the_best" type="Button" parent="V"]
margin_left = 40.0
margin_top = 43.0
margin_right = 115.0
margin_bottom = 20.0
rect_scale = Vector2( 2, 2 )
text = "best"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all" type="Button" parent="V"]
margin_left = 40.0
margin_top = 113.0
margin_right = 115.0
margin_bottom = 20.0
rect_scale = Vector2( 2, 2 )
text = "all"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_gen" type="Button" parent="V"]
margin_left = 257.0
margin_top = 45.0
margin_right = 115.0
margin_bottom = 20.0
rect_scale = Vector2( 2, 2 )
text = "next generation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="V"]
margin_left = 524.0
margin_top = 41.0
margin_right = 317.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
text = "Generation: 0"

[connection signal="button_up" from="V/watch_the_best" to="population" method="_on_watch_the_best_button_up"]
[connection signal="button_up" from="V/all" to="population" method="_on_all_button_up"]
[connection signal="button_up" from="V/next_gen" to="population" method="next_generation"]
